docs: 记录群管理员修复验证结果